--- a/chart.html
+++ b/chart.html
@@ -91,20 +91,20 @@
 </head>
 <body>
     <div style="display: flex; justify-content: center; align-items: flex-start;">
-        <svg id="chart" width="1000" height="670"></svg>
-        <svg id="legend" width="350" height="670" style="margin-left: 20px;"></svg>
+      <svg id="chart" width="1000" height="500"></svg>
+      <svg id="legend" width="350" height="500" style="margin-left: 15px;"></svg>
     </div>
   <div id="tooltip" class="tooltip" style="opacity:0;"></div>
   <div class="button-container">
     <svg id="button-lines" width="1000" height="60"></svg>
-    <div class="button-group" id="buttons" style="display: flex; justify-content: center; gap: 20px; margin-left:-100px; margin-top: -84px;"></div>
+    <div class="button-group" id="buttons" style="display: flex; justify-content: center; gap: 20px; margin-left:-100px; margin-top: -60px;"></div>
 
   </div>
 
   <script>
-    const margin = { top: 200, right: 30, bottom: 70, left: 240 };
-    const width = 1000 - margin.left - margin.right;
-    const height = 600 - margin.top - margin.bottom;
+    const margin = { top: 50, right: 30, bottom: 70, left: 240 };
+    const width = 740 - margin.left - margin.right;
+    const height = 500 - margin.top - margin.bottom;
 
     //Parameters for scaling the circles on the chart 
     const scaleFactor = 5;
@@ -122,6 +122,7 @@
       "Melanesia"
     ]);
 
+    // Month names for the x-axis
     const monthNames = ["Jan", "Feb", "Mar", "Apr", "May", "Jun",
                         "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
 
@@ -133,7 +134,8 @@
 
     const tooltip = d3.select("#tooltip");
 
-    d3.csv("tropical_cyclones_filtered.csv", d3.autoType).then(data => {
+    ///Data loading
+    d3.csv("tropical_cyclones_filtered.csv", d3.autoType).then(data => { 
       data = data.filter(d => subregionFilter.has(d["Subregion"]));
       const yearsToShow = [1960, 1970, 1980, 1990, 2000, 2010, 2020];
       const dataByYear = d3.group(data, d => d["Start Year"]);
@@ -168,6 +170,7 @@
         .attr("y", height + 15)
         .attr("text-anchor", "middle")
         .text(d => monthNames[d - 1]);
+        
 
       // Y labels
       svg.selectAll(".y-label")
@@ -180,7 +183,7 @@
         .attr("alignment-baseline", "middle")
         .text(d => d);
 
-      // Legend
+      /// Legend
       const rScaleLegend =  d3.scaleSqrt()
         .domain([1000, 1000000])
         .range([10, 60]);
@@ -247,7 +250,7 @@
       function update(year) {
         const yearData = dataByYear.get(year) || [];
 
-        // Red solid fixed-size
+        // Red solid fixed-size — Recorded Hurricanes
         const fixed = svg.selectAll(".circle-solid")
           .data(yearData, (d, i) => d["Subregion"] + d["Start Month"] + i);
 
@@ -275,7 +278,7 @@
           exit => exit.remove()
         );
 
-        // Outlined red stroke
+        /// Outlined red stroke — Impact
         const outline = svg.selectAll(".circle-outline")
           .data(yearData.filter(d => d["Total Affected"] != null), d => d["Subregion"] + d["Start Month"]);
 
